fix body overflow bug on windows

--- a/newamericadotorg/assets/scss/base/_initial.scss
+++ b/newamericadotorg/assets/scss/base/_initial.scss
@@ -24,6 +24,7 @@ html, body{
   margin: 0;
   padding: 0;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 body.scroll-disabled {
